# server

./: CMakeLists.txt  Close.cpp  Close.h  Command.h  CommandManager.cpp  CommandManager.h  GameManeger.cpp  GameManeger.h  Join.cpp  Join.h  ListGames.cpp  ListGames.h  Play.cpp  Play.h  Server.cpp  Server.h  ServerReversiLogic.cpp  ServerReversiLogic.h  StartGame.cpp  StartGame.h  Task.cpp  Task.h  ThreadPool.cpp  ThreadPool.h  TwoClientsGame.cpp  TwoClientsGame.h  main.cpp  makefile  settings.txt
